[package]
edition = "2021"
name = "rust-blogpost-auth-async"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
actix-web-httpauth = "0.6.0"
chrono = {version = "0.4.1", features = ["serde"]}
derive_more = "0.99.2"
diesel = {version = "1.4.8", features = ["postgres", "uuid", "r2d2", "chrono"]}
dotenv = "0.15.0"
# futures="0.3.21"
alcoholic_jwt = "4091.0.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
r2d2 = "0.8.9"
reqwest = {version = "0.11.11", features=["json"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = "1.1.2"
